correction
corrected some properties and added scrollbar to the right section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,8 @@ body {
 
 .right {
   width: 35%;
-  /* overflow-y: auto; */
+  overflow-y: auto;
+  margin-bottom: 20px;
 }
 
 .artwork {
